--- a/src/app/components/servers/edit-server.component.html
+++ b/src/app/components/servers/edit-server.component.html
@@ -1,6 +1,4 @@
-<h2 mat-dialog-title>Editing Automation Options</h2>
-<div mat-dialog-content>
-
+<div class="form">
 	<mat-form-field appearance="fill">
 		<mat-label>Base Interval (seconds)</mat-label>
 		<input type="number" matInput [(ngModel)]="automationOptions.baseInterval">
@@ -10,9 +8,9 @@
 		<mat-label>Maximum Failures</mat-label>
 		<input type="number" matInput [(ngModel)]="automationOptions.maxFailures">
 	</mat-form-field>
-</div>
 
-<div mat-dialog-actions>
-	<button mat-flat-button color="primary" (click)="save()" cdkFocusInitial>OK</button>
-	<button mat-flat-button (click)="cancel()">Cancel</button>
+	<div class="flex-spread">
+		<button mat-flat-button color="primary" (click)="save()" cdkFocusInitial>Save</button>
+		<button mat-button color="warn" (click)="delete()">Remove</button>
+	</div>
 </div>
