--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,13 +2,13 @@
 <div mat-dialog-content>
   <mat-form-field appearance="fill">
     <mat-label>Username</mat-label>
-    <input matInput [(ngModel)]="user.username">
+    <input matInput [(ngModel)]="userLogin.username">
   </mat-form-field>
   <mat-form-field appearance="fill">
     <mat-label>Password</mat-label>
-    <input type="password" matInput [(ngModel)]="user.password">
+    <input type="password" matInput [(ngModel)]="userLogin.password">
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
-  <button mat-raised-button color="primary"cdkFocusInitial (click)="login()">Login</button>
+  <button mat-raised-button color="primary" cdkFocusInitial (click)="login()">Login</button>
 </div>
