--- a/src/assets/theme/green-blue.scss
+++ b/src/assets/theme/green-blue.scss
@@ -4,7 +4,7 @@
 
 // Define a theme.
 $my-custom-primary: mat-palette($mat-green, 600, 400, 800);
-$my-custom-accent:  mat-palette($mat-indigo, 400, 200, 600);
+$my-custom-accent:  mat-palette($mat-blue, 600, 400, 800);
 
 $green-blue-dark-theme: mat-dark-theme((
   color: (
