--- a/src/app/components/jobs/edit-job.component.html
+++ b/src/app/components/jobs/edit-job.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Editing {{ job.name }}</h2>
+<h2 mat-dialog-title>{{ job.name }} Settings</h2>
 <div mat-dialog-content>
 	<mat-form-field appearance="fill">
 		<mat-label>Next Start Date</mat-label>
