--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,6 +1,10 @@
 <nav>
 	<ul>
-		<li><a mat-button routerLink="/jobs" routerLinkActive="active"><mat-icon>watch_later</mat-icon>Registered Jobs</a></li>
-		<li><a mat-button routerLink="/automation" routerLinkActive="active"><mat-icon>memory</mat-icon>Automation Servers</a></li>
+		<li><a mat-button routerLink="/servers" routerLinkActive="active">
+				<mat-icon>memory</mat-icon>Automation Servers
+			</a></li>
+		<li><a mat-button routerLink="/users" routerLinkActive="active">
+				<mat-icon>people</mat-icon>User Management
+			</a></li>
 	</ul>
 </nav>
