--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,14 +1,14 @@
 <h2 mat-dialog-title>Login</h2>
 <div mat-dialog-content>
-  <mat-form-field appearance="fill">
-    <mat-label>Username</mat-label>
-    <input matInput [(ngModel)]="userLogin.username">
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>Password</mat-label>
-    <input type="password" matInput [(ngModel)]="userLogin.password">
-  </mat-form-field>
+	<mat-form-field appearance="fill">
+		<mat-label>Email Address</mat-label>
+		<input matInput [(ngModel)]="userLogin.username">
+	</mat-form-field>
+	<mat-form-field appearance="fill">
+		<mat-label>Password</mat-label>
+		<input type="password" matInput [(ngModel)]="userLogin.password">
+	</mat-form-field>
 </div>
 <div mat-dialog-actions>
-  <button mat-raised-button color="primary" cdkFocusInitial (click)="login()">Login</button>
+	<button mat-raised-button color="primary" cdkFocusInitial (click)="login()">Login</button>
 </div>
