--- a/src/app/components/servers/delete-server.component.html
+++ b/src/app/components/servers/delete-server.component.html
@@ -1,7 +1,7 @@
-<h2 mat-dialog-title>Remove Server</h2>
+<h2 mat-dialog-title>Unlink {{ server.friendlyName }}</h2>
 <div mat-dialog-content>
 	<p>
-		Type the server name ({{ server.friendlyName }}) below to remove this server from your account.
+		Type the server name ({{ server.friendlyName }}) below to unlink this server from your account.  This will not stop the server or disable any jobs.
 	</p>	
 	<mat-form-field appearance="fill">
 		<mat-label>Server Name</mat-label>
