--- a/src/app/components/servers/servers.component.html
+++ b/src/app/components/servers/servers.component.html
@@ -5,45 +5,68 @@
 	</button>
 </div>
 
-<table mat-table [dataSource]="dataSource" multiTemplateDataRows>
-	<ng-container matColumnDef="name">
-		<th mat-header-cell *matHeaderCellDef>Name</th>
-		<td mat-cell *matCellDef="let element">{{ element.friendlyName }}</td>
-	</ng-container>
+<div *ngIf="dataSource.value?.length > 0; else noServers">
+	<table mat-table [dataSource]="dataSource" multiTemplateDataRows>
+		<ng-container matColumnDef="name">
+			<th mat-header-cell *matHeaderCellDef>Name</th>
+			<td mat-cell *matCellDef="let element">{{ element.friendlyName }}</td>
+		</ng-container>
 
-	<ng-container matColumnDef="url">
-		<th mat-header-cell *matHeaderCellDef>Url</th>
-		<td mat-cell *matCellDef="let element">{{ element.url }}</td>
-	</ng-container>
+		<ng-container matColumnDef="url">
+			<th mat-header-cell *matHeaderCellDef>Url</th>
+			<td mat-cell *matCellDef="let element">{{ element.url }}</td>
+		</ng-container>
 
-	<ng-container matColumnDef="logs">
-		<td mat-cell *matCellDef="let element" [attr.colspan]="columns.length" style="background-color: #555;">
-			<div class="detail-container" [@detailExpand]="element == jobDetail ? 'expanded' : 'collapsed'">
-				<div class="detail-content">
-					<mat-tab-group dynamicHeight>
+		<ng-container matColumnDef="actions">
+			<th mat-header-cell *matHeaderCellDef></th>
+			<td mat-cell *matCellDef="let element" class="actions-cell">
+				<button mat-icon-button [matMenuTriggerFor]="jobActions" (click)="preventDefault($event)">
+					<mat-icon>more_vert</mat-icon>
+				</button>
+				<mat-menu #jobActions>
+					<mat-menu-item><button mat-menu-item (click)="viewDetails(element)">
+							<mat-icon>info</mat-icon>Details
+						</button></mat-menu-item>
+					<mat-menu-item><button mat-menu-item (click)="editServer(element)">
+							<mat-icon>settings</mat-icon>Settings
+						</button></mat-menu-item>
+					<mat-menu-item><button mat-menu-item (click)="deleteServer(element)">
+							<mat-icon>link_off</mat-icon>Unlink
+						</button></mat-menu-item>
+				</mat-menu>
+			</td>
+		</ng-container>
 
-						<mat-tab label="Jobs">
-							<app-jobs></app-jobs>
-						</mat-tab>
 
-						<mat-tab label="Server Logs">
-							<app-logs></app-logs>
-						</mat-tab>
+		<ng-container matColumnDef="logs">
+			<td mat-cell *matCellDef="let element" [attr.colspan]="columns.length" style="background-color: #555;">
+				<div class="detail-container" [@detailExpand]="element == jobDetail ? 'expanded' : 'collapsed'">
+					<div class="detail-content">
+						<mat-tab-group dynamicHeight (selectedTabChange)="tabClick($event)">
 
-						<mat-tab label="Settings">
-							<app-edit-server [server]="element"></app-edit-server>
-						</mat-tab>
-					</mat-tab-group>
+							<mat-tab label="Jobs">
+								<app-jobs [server]="element"></app-jobs>
+							</mat-tab>
+
+							<mat-tab label="Server Logs">
+								<app-logs></app-logs>
+							</mat-tab>
+						</mat-tab-group>
+					</div>
 				</div>
-			</div>
-		</td>
-	</ng-container>
+			</td>
+		</ng-container>
 
-	<tr mat-header-row *matHeaderRowDef="columns"></tr>
+		<tr mat-header-row *matHeaderRowDef="columns"></tr>
 
-	<tr mat-row *matRowDef="let element; columns: columns;" class="overview-row"
-		[class.example-expanded-row]="jobDetail === element"
-		(click)="jobDetail = jobDetail === element ? null : element"> </tr>
+		<tr mat-row *matRowDef="let element; columns: columns;" class="overview-row"
+			[class.example-expanded-row]="jobDetail === element"
+			(click)="jobDetail = jobDetail === element ? null : element"> </tr>
 
-	<tr mat-row *matRowDef="let row; columns: ['logs']" class="detail-row"></tr>
-</table>
+		<tr mat-row *matRowDef="let row; columns: ['logs']" class="detail-row"></tr>
+	</table>
+</div>
+
+<ng-template #noServers>
+	<em>No servers are linked to your account.</em>
+</ng-template>
