--- a/src/app/components/jobs/jobs.component.html
+++ b/src/app/components/jobs/jobs.component.html
@@ -24,9 +24,9 @@
 				<mat-menu-item><button mat-menu-item (click)="viewDetails(element)">
 						<mat-icon>info</mat-icon>Details
 					</button></mat-menu-item>
-				<mat-menu-item><button mat-menu-item (click)="editJob(element)">
+				<!-- <mat-menu-item><button mat-menu-item (click)="editJob(element)">
 						<mat-icon>settings</mat-icon>Settings
-					</button></mat-menu-item>
+					</button></mat-menu-item> -->
 			</mat-menu>
 			<!-- <button mat-flat-button color="primary" *ngIf="!element.isRunning && element.isEnabled"
 				(click)="runJob($event, element.id)">Run</button> -->
