--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -3,8 +3,8 @@
 		<li><a mat-button routerLink="/servers" routerLinkActive="active">
 				<mat-icon>memory</mat-icon>Automation Servers
 			</a></li>
-		<li><a mat-button routerLink="/users" routerLinkActive="active">
+		<!-- <li><a mat-button routerLink="/users" routerLinkActive="active">
 				<mat-icon>people</mat-icon>User Management
-			</a></li>
+			</a></li> -->
 	</ul>
 </nav>
